--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@
 # Distributed under the Boost Software License, Version 1.0.
 # See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt
 
-os: linux
-dist: trusty
 sudo: required
 language: cpp
 
@@ -15,129 +13,167 @@ env:
       - secure: "DuBGzmeKiWMm5m0+uZhutjzCffB2PbixmuMm3IZWUi7/uAam4PPI37oeqVTIytxxfpgRvfR2ah75eJyU6ab72MBoHxGkHem10RAvhC/vPYbLZu545qfSGatyTI9R6NfERUxi7YIxjs6D8c4D/5k3gMoCbMUkU1Lze1708lknh5U="
 
     matrix:
-      - BOGUS_JOB=true
+      - BOGUS_JOB
 
 addons:
     apt:
-        packages: &base_packages
-        sources: &base_sources
+        packages: &ubuntu_packages
+        sources: &ubuntu_sources
           - ubuntu-toolchain-r-test
 
 matrix:
     exclude:
-      - env: BOGUS_JOB=true
+      - env: BOGUS_JOB
 
     include:
-      - env: BUILD_DOC=true
+      - os: linux
+        dist: trusty
+        env: BUILD_DOC=true
 
-      - compiler: clang++
-        env: CXX_VERSION=3.4 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.4
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.4 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+      - os: osx
+        env: BUILD_DOC=true
 
-      - compiler: clang++
-        env: CXX_VERSION=3.5 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.5
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.5 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: clang++
-        env: CXX_VERSION=3.6 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.6
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.6 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: clang++
-        env: CXX_VERSION=3.7 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.7
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.7 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: clang++
-        env: CXX_VERSION=3.8 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.8
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: clang++
-        env: CXX_VERSION=3.9 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-3.9
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: clang++
-        env: CXX_VERSION=4.0 CXXFLAGS=-stdlib=libc++
-        addons:
-            apt:
-                packages:
-                  - *base_packages
-                  - clang-4.0
-                  - libc++-dev
-                sources:
-                  - *base_sources
-                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty main'
-                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-
-      - compiler: g++
+      - os: linux
+        dist: trusty
+        compiler: g++
         env: CXX_VERSION=5
         addons:
             apt:
                 packages:
-                  - *base_packages
+                  - *ubuntu_packages
                   - g++-5
-                sources: *base_sources
+                sources: *ubuntu_sources
 
-      - compiler: g++
+      - os: linux
+        dist: trusty
+        compiler: g++
         env: CXX_VERSION=6
         addons:
             apt:
                 packages:
-                  - *base_packages
+                  - *ubuntu_packages
                   - g++-6
-                sources: *base_sources
+                sources: *ubuntu_sources
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.4 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.4
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.4 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.5 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.5
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.5 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.6 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.6
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.6 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.7 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.7
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.7 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.8 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.8
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=3.9 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-3.9
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: linux
+        dist: trusty
+        compiler: clang++
+        env: CXX_VERSION=4.0 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - clang-4.0
+                  - libc++-dev
+                sources:
+                  - *ubuntu_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
+      - os: osx
+        osx_image: xcode6.4
+
+      - os: osx
+        osx_image: xcode7.3
+
+      - os: osx
+        osx_image: xcode8
+
+      - os: osx
+        osx_image: xcode8.1
+
+      - os: osx
+        osx_image: xcode8.2
 
 before_install:
   - git config --global user.name "Travis Bot"
@@ -177,13 +213,21 @@ before_install:
 
 install:
   - |
-    if [[ "${BUILD_DOC}" == "true" ]]
+    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]
+    then
+        brew update
+        brew unlink cmake doxygen
+        brew install cmake doxygen
+        true
+    fi
+
+  - |
+    if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_OS_NAME}" == "linux" ]]
     then
         # download the latest doxygen available
         DOXYGEN_FTP="ftp://ftp.stack.nl/pub/users/dimitri/"
         DOXYGEN_PKG=$(travis_retry curl -Ls "${DOXYGEN_FTP}" | grep -Eo "doxygen-[0-9.]+linux[.]bin[.]tar[.]gz" | sort -V | tail -1)
         DOXYGEN_URL="${DOXYGEN_FTP}/${DOXYGEN_PKG}"
-        echo "${DOXYGEN_URL}"
         mkdir -p "${DEPS_PATH}/doxygen" &&
         travis_retry curl -L "${DOXYGEN_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"
         export PATH="${DEPS_PATH}/doxygen/bin:${PATH}"
@@ -191,6 +235,7 @@ install:
 
 before_script:
   - CMAKE_ARGS=("-DCMAKE_INSTALL_PREFIX=${METAL_INSTALL_PATH}")
+
   - |
     if [[ -n "${CXX}" && -n "${CXX_VERSION}" ]]
     then
@@ -202,6 +247,7 @@ before_script:
   - CMAKE_ARGS+=("-DCMAKE_PREFIX_PATH=${METAL_INSTALL_PATH}")
   - CMAKE_ARGS+=("-DMETAL_VERSION=${METAL_VERSION}")
   - CMAKE_ARGS+=("-DMETAL_VERSION_EXACT=${METAL_VERSION_EXACT}")
+
   - |
     if [[ "${BUILD_DOC}" != "true" ]]
     then
