--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: g++
-        env: CXX_VERSION=5
+        env: CXXVER=5
         addons:
             apt:
                 packages:
@@ -48,7 +48,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: g++
-        env: CXX_VERSION=6
+        env: CXXVER=6
         addons:
             apt:
                 packages:
@@ -59,7 +59,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.4
+        env: CXXVER=3.4
         addons:
             apt:
                 packages:
@@ -75,7 +75,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.5
+        env: CXXVER=3.5
         addons:
             apt:
                 packages:
@@ -91,7 +91,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.6
+        env: CXXVER=3.6
         addons:
             apt:
                 packages:
@@ -107,7 +107,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.7
+        env: CXXVER=3.7
         addons:
             apt:
                 packages:
@@ -123,7 +123,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.8
+        env: CXXVER=3.8
         addons:
             apt:
                 packages:
@@ -139,7 +139,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.9
+        env: CXXVER=3.9
         addons:
             apt:
                 packages:
@@ -155,7 +155,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=4.0
+        env: CXXVER=4.0
         addons:
             apt:
                 packages:
@@ -171,7 +171,7 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=5.0
+        env: CXXVER=5.0
         addons:
             apt:
                 packages:
@@ -249,9 +249,9 @@ before_script:
   - CMAKE_ARGS=("${METAL_SOURCE_PATH}")
 
   - |
-    if [[ -n "${CXX}" && -n "${CXX_VERSION}" ]]
+    if [[ -n "${CXX}" && -n "${CXXVER}" ]]
     then
-        CMAKE_ARGS+=("-DCMAKE_CXX_COMPILER=${CXX}-${CXX_VERSION}")
+        CMAKE_ARGS+=("-DCMAKE_CXX_COMPILER=${CXX}-${CXXVER}")
     fi
 
     CMAKE_ARGS+=("-DCMAKE_CXX_FLAGS=-DMETAL_TEST_GEN_LIMIT=9")
