--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,12 @@ shallow_clone: true
 environment:
     matrix:
       - BUILD_DOC: true
+
+      - GENERATOR: "Visual Studio 14 2015"
+        CXXFLAGS: /DMETAL_TEST_GEN_LIMIT=7
+
       - GENERATOR: "MinGW Makefiles"
         CXXFLAGS: -DMETAL_TEST_GEN_LIMIT=9
-      - GENERATOR: "NMake Makefiles"
-        COMPILER: cl
-        CXXFLAGS: /DMETAL_TEST_GEN_LIMIT=7
 
 configuration:
   - Debug
@@ -20,18 +21,14 @@ install:
   - if "%BUILD_DOC%" equ "true" (choco install doxygen.portable)
 
 before_build:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat"
-
   - set PATH=C:\mingw-w64\i686-5.3.0-posix-dwarf-rt_v4-rev0\mingw32\bin;%PATH:C:\Program Files\Git\usr\bin;=%
 
   - set "METAL_SOURCE_PATH=%APPVEYOR_BUILD_FOLDER%"
-
   - set "METAL_BUILD_PATH=%APPVEYOR_BUILD_FOLDER%\build"
   - mkdir "%METAL_BUILD_PATH%"
 
   - set "CMAKE_ARGS=%METAL_SOURCE_PATH%"
   - if defined GENERATOR (set "CMAKE_ARGS=%CMAKE_ARGS% -G"%GENERATOR%"")
-  - if defined COMPILER (set "CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_CXX_COMPILER=%COMPILER%")
   - set "CMAKE_ARGS=%CMAKE_ARGS% -DCMAKE_BUILD_TYPE=%CONFIGURATION%"
   - pushd "%METAL_BUILD_PATH%" && cmake %CMAKE_ARGS% & popd
 
