--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,17 @@ matrix:
       - os: linux
         dist: trusty
         compiler: g++
+        env: CXXVER=4.9
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - g++-4.9
+                sources: *ubuntu_sources
+
+      - os: linux
+        dist: trusty
+        compiler: g++
         env: CXXVER=5
         addons:
             apt:
