--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,11 +8,22 @@ environment:
     matrix:
       - BUILD_DOC: true
 
-      - GENERATOR: "Visual Studio 14 2015"
+      - COMPILER: Visual Studio 14 2015
+        GENERATOR: "Visual Studio 14 2015"
         CXXFLAGS: /DMETAL_TEST_GEN_LIMIT=7
+        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
-      - GENERATOR: "MinGW Makefiles"
+      - COMPILER: MinGW 5
+        GENERATOR: "MinGW Makefiles"
         CXXFLAGS: -DMETAL_TEST_GEN_LIMIT=9
+        BINDIR: C:\mingw-w64\i686-5.3.0-posix-dwarf-rt_v4-rev0\mingw32\bin
+        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+
+      - COMPILER: MinGW 6
+        GENERATOR: "MinGW Makefiles"
+        CXXFLAGS: -DMETAL_TEST_GEN_LIMIT=9
+        BINDIR: C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin
+        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
 configuration:
   - Debug
@@ -21,7 +32,8 @@ install:
   - if "%BUILD_DOC%" equ "true" (choco install doxygen.portable)
 
 before_build:
-  - set PATH=C:\mingw-w64\i686-5.3.0-posix-dwarf-rt_v4-rev0\mingw32\bin;%PATH:C:\Program Files\Git\usr\bin;=%
+  - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
+  - if defined BINDIR (set "PATH=%BINDIR%;%PATH%")
 
   - set "METAL_SOURCE_PATH=%APPVEYOR_BUILD_FOLDER%"
   - set "METAL_BUILD_PATH=%APPVEYOR_BUILD_FOLDER%\build"
